# better-notepad

./: .gitignore  CMakeLists.txt  README.md
src/: App.cpp  App.hpp  Frame.cpp  Frame.hpp  TextFileDropTarget.cpp  TextFileDropTarget.hpp  TextManager.cpp  TextManager.hpp
